variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value c
c = 0
^Variables:8: error: not found: value c
      c++
      ^Variables:11: error: not found: value c
      c--
      ^Variables:17: error: not found: value c
  if(c = 0 && porteBiscuit()){
     ^