variables.Variables.scala.code
c = 0
while(!estSurBiscuit() || porteBiscuit()){
  if(estSurBiscuit()){
    prendBiscuit()
  } else {
    if(!estSurBiscuit() && !porteBiscuit()){
      avance()
      c++
    } else {
      recule()
      c--
    }
  }
  if(estSurBiscuit()){
    prendBiscuit()
  }
  if(c = 0 && porteBiscuit()){
    poseBiscuit()
  }
}